<resources>
    <string name="app_name">Seguros</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="email">E-Mail</string>
    <string name="empty">Empty</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="password_error">Password incorrect</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="signout_message">Sign out from this account, clear data and close the app?</string>
    <string name="signout_summary">Sign out from this account.</string>
    <string name="sync_text">To present your spreadsheet in a simple and secure way, the application
        needs you permission to read all Google Drive files.\n\nThe application will NOT read all
        files. The application will read ONLY the spreadsheet whose name you enter below. But to
        find your spreadsheet by name, the application needs this permission.</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="spreadsheet_error">Name incorrect</string>
    <string name="spreadsheet_name">Spreadheet name</string>
    <string name="spreadsheet_not_found">Spreadsheet not found</string>
    <string name="update_successfully">Update successfully</string>
    <string name="version">Version</string>
    <string name="version_num">v2.9</string>
    <string name="version_url">https://github.com/arm332/seguros/</string>
    <string name="website">Web Site</string>
</resources>
