<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:key="account_category"
        android:title="@string/account">

        <Preference
            app:iconSpaceReserved="false"
            android:key="email_key"
            android:title="@string/email"
            android:summary="@string/email" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="spreadsheet_key"
            android:title="@string/spreadsheet_name"
            android:summary="@string/spreadsheet_name">
            <!-- <intent android:action="android.intent.action.VIEW"
                android:targetPackage="com.arm332.seguros2"
                android:targetClass="com.arm332.seguros2.SyncActivity" /> -->
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:key="about_category"
        android:title="@string/about">

        <Preference
            app:iconSpaceReserved="false"
            android:key="version_key"
            android:title="@string/version"
            android:summary="@string/version_num" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="website_key"
            android:title="@string/website"
            android:summary="@string/version_url">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/version_url" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
