<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="?attr/dialogPreferredPadding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/app_name" />

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_activity_main" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version" />
</RelativeLayout>